      only since it's quite large and mostly useful for testing. Disabled
      for the moment until new kernel packages arrive in the archive.
    - Fix up powerpc CD image targets, which had bitrotted (a number of the
      variables they used weren't defined).
  * Martin Michlmayr
    - Clarify description of mips/sb1-swarm-bn's netboot images.

 -- Colin Watson <cjwatson@debian.org>  Tue,  6 Apr 2004 21:48:33 +0100

debian-installer (20040405) unstable; urgency=low

  * The "will voltaire SIGILL today?" release.

  * Karsten Merker
    - Include DEC keymaps on mipsel.
  * Bastian Blank
    - Make daily-build a little bit more reliable.
  * Martin Michlmayr
    - Add better sucharchitecture handling for choosing which udebs
      to include on different images.
    - Only include DEC keymaps on DECstations (r3k-kn02 and r4k-kn04).
    - Include discover on the netboot images on the Broadcom SWARM and
      on MIPS based Cobalt machines.
    - Include usb-discover and USB keymaps on the netboot images on
      the Broadcom SWARM.
    - Build depend on discover on mips and mipsel.

 -- Joey Hess <joeyh@debian.org>  Tue,  6 Apr 2004 00:22:23 -0400

debian-installer (20040403) unstable; urgency=low

  * Martin Michlmayr
    - Add delo to Build-Depends on mipsel.
    - Enable autobuilding on mipsel.
  * Martin Michlmayr, Vincent Sanders
    - Enable autobuilding on arm.
  * Joey Hess
    - Fix alpha netboot to use discover1-udeb, to avoid build failure.
 
 -- Joey Hess <joeyh@debian.org>  Wed, 31 Mar 2004 16:43:13 -0500

debian-installer (20040402) unstable; urgency=low

  * Joey Hess
    - Add copyright info for the manual to debian/copyright.
    - Add logo by Alessandro Polverini and Andrea Mottola.
      Not the default until the Debian version is corrected though.
    - Add logo copyright info to debian/copyright.
    - Fix access floppy building with 2.6 kernel, same as root floppy was
      fixed earlier.