@@ -1,11 +1,9 @@
-MEDIUM_SUPPORTED = netboot
+MEDIUM_SUPPORTED = generic tape
 
-# The version of the kernel to use.
-KERNELVERSION = 2.4.21-1-s390
+KERNEL = $(DEST)/image.debian
+
+KERNELVERSION = 2.4.25-1-s390
 KERNEL_FLAVOUR = di
-KERNELNAME = vmlinuz-$(KERNELVERSION)
+KERNELNAME = vmlinuz
 KERNELIMAGEVERSION = $(KERNELVERSION)
 
-VERSIONED_SYSTEM_MAP = t
-
-arch_boot_screens:
