@@ -1,10 +1,0 @@
-MEDIA_TYPE = netboot image
-
-TARGET = $(INITRD) $(KERNEL)
-EXTRANAME = $(MEDIUM)/
-
-MANIFEST-INITRD = "initrd for netboot install"
-MANIFEST-KERNEL = "kernel for netboot install"
-
-# FIXME: Temporary fix, these files should be in a udeb!
-EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
