@@ -1,0 +1,9 @@
+cdebconf-text-udeb
+
+netcfg-static
+nic-modules-${kernel:Version}
+s390-netdevice
+
+# used by netcfg
+libiw27-udeb
+
