@@ -8,8 +8,15 @@ debian-installer (20040406) UNRELEASED; urgency=low
       variables they used weren't defined).
   * Martin Michlmayr
     - Clarify description of mips/sb1-swarm-bn's netboot images.
+  * Bastian Blank
+    - Split tree target.
+    - Add generic and s390-tape type.
+    - Build generic and tape medium on s390.
+    - Move correct kernel images.
+    - Add s390 boot files.
+    - s390 uses 2.4.25-1 kernels.
 
- -- Colin Watson <cjwatson@debian.org>  Tue,  6 Apr 2004 21:48:33 +0100
+ -- Bastian Blank <waldi@debian.org>  Wed, 07 Apr 2004 17:44:41 +0200
 
 debian-installer (20040405) unstable; urgency=low
 
